--- a/report/LaTexTemplate.tex
+++ b/report/LaTexTemplate.tex
@@ -6,17 +6,16 @@
 
 
 \begin{document}
-\title{SIG Proceedings Paper in LaTeX Format}
+\title{Computational Intelligence Coursework}
 \acmConference[SET10107]{Coursework}{April 2022}{Edinburgh Napier University} 
 \acmYear{2022}
 \copyrightyear{2022}
 
-\author{40451571r}
+\author{40451571}
 
 
 
-\begin{abstract}
-Abstract goes here
+\begin{abstract}This coursework requires the weights of a multi-layer perceptron artifical neural network to be evolved and used to control the landing of spacecraft. To achieve this, an evolutionary algorithm was implemented. Multiple operators were applied and tested to find the best methods for this problem. Parameter tuning was performed to further satisfy our goals of findiong the best combination for safe landing.
 \end{abstract}
 
 
@@ -27,11 +26,21 @@ Abstract goes here
 \maketitle
 
 \section{Introduction}
+To solve this problem, we employed an evolutionary algorithm. 
+\cite{Tesla}
+
+An evolutionary algorithm typically uses the following structure: Individuals are initialised and a loop of selection, crossover, mutation and replacement operations occur until a stopping criteria is met. In the paper, we document experiments on the selection, crossover, mutation and replacement operations with the intent of finding the combination of operators that lead to the best fitness value.
+
+EV CHOSEN
+
+NEURAL NETWORK PARAMETERS
 \section{Methodology}
 \section{Results}
 \section{Conclusion}
 
-%\bibliographystyle{ACM-Reference-Format}
-\bibliography{sigproc} 
+
+\bibliographystyle{ACM-Reference-Format}
+\bibliography{bib} 
+
 
 \end{document}
