--- a/report/bib.bib
+++ b/report/bib.bib
@@ -4,3 +4,54 @@ author = {Nvidia},
 note = {\url{https://images.nvidia.com/content/volta-architecture/pdf/volta-architecture-whitepaper.pdf}},
 year = {2017}
 }
+
+@article{10.1162/evco.1996.4.4.361,
+    author = {Blickle, Tobias and Thiele, Lothar},
+    title = "{A Comparison of Selection Schemes Used in Evolutionary Algorithms}",
+    journal = {Evolutionary Computation},
+    volume = {4},
+    number = {4},
+    pages = {361-394},
+    year = {1996},
+    month = {12},
+    abstract = "{Evolutionary algorithms are a common probabilistic optimization method based on the model of natural evolution. One important operator in these algorithms is the selection scheme, for which in this paper a new description model, based on fitness distributions, is introduced. With this, a mathematical analysis of tournament selection, truncation selection, ranking selection, and exponential ranking selection is carried out that allows an exact prediction of the fitness values after selection. The correspondence of binary tournament selection and ranking selection in the expected fitness distribution is proved. Furthermore, several properties of selection schemes are derived (selection intensity, selection variance, loss of diversity), and the three selection schemes are compared using these properties.}",
+    issn = {1063-6560},
+    doi = {10.1162/evco.1996.4.4.361},
+    url = {https://doi.org/10.1162/evco.1996.4.4.361},
+    eprint = {https://direct.mit.edu/evco/article-pdf/4/4/361/1492921/evco.1996.4.4.361.pdf},
+}
+@article{Belfiore1998,
+   abstract = {This paper is concerned with crossover operators for genetic algorithms (GAs) which are used to solve problems based on real numbers. First, a classification of the operators is introduced, dividing cross-over into a vector-level and a variable-level operator. The theoretical study of variable-level operators for binary coded GAs leads to the discovery of two properties, which are used to define certain characteristics of crossover operators used by real-number encoded GAs. For variable-level operators, the experimental distributions of the offspring variables of given pairs of parent variables are then found. Finally, an experimental comparison of crossover operator performance is carried out.},
+   author = {N P Belfiore and A Esposito},
+   issue = {2},
+   journal = {JOURNAL OF OPTIMIZATION THEORY AND APPLICATIONS},
+   keywords = {Genetic algorithms,binary encoding,convergence,crossover operators,real-number based problems,real-number encoding},
+   pages = {271-302},
+   title = {Theoretical and Experimental Study of Crossover Operators of Genetic Algorithms},
+   volume = {99},
+   year = {1998},
+}
+
+@article{Mutation,
+   author = {P Larrañaga and C.M.H Kuijpers and R.H Murga and I Inza and S Dizdarevic},
+   city = {Dordrecht},
+   doi = {10.1023/A:1006529012972},
+   issn = {0269-2821},
+   issue = {2},
+   journal = {The Artificial intelligence review},
+   keywords = {adjacency representation},
+   pages = {129-170},
+   publisher = {Kluwer Academic Publishers},
+   title = {Genetic Algorithms for the Travelling Salesman Problem: A Review of Representations and Operators},
+   volume = {13},
+   year = {1999},
+}
+
+@article{SteadyState,
+author = {Whitley, Darrell},
+year = {2000},
+month = {06},
+pages = {},
+title = {The GENITOR Algorithm and Selection Pressure: Why Rank-Based Allocation of Reproductive Trials is Best},
+volume = {89}
+}
